# loupe

./: .gitignore  README.md  package.json
.github/: dependabot.yml
.github/workflows/: security.yml  test.yml
be/: .env.example  Cargo.toml  deny.toml  loupe.db
be/migrations/: 20260111000000_initial.down.sql  20260111000000_initial.sql  20260111000000_initial.up.sql  20260111000001_add_pie_chart.sql  20260111000002_add_tags.sql  20260128000000_canvases.down.sql  20260128000000_canvases.up.sql  20260131000000_add_text_search_indexes.down.sql  20260131000000_add_text_search_indexes.up.sql  20260201000000_schema_improvements.down.sql  20260201000000_schema_improvements.up.sql  20260201000001_add_run_retries.down.sql  20260201000001_add_run_retries.up.sql  20260201000002_add_dead_letter_queue.down.sql  20260201000002_add_dead_letter_queue.up.sql
be/src/api/: main.rs  permissions.rs
be/src/api/app_middleware/: correlation_id.rs  metrics_middleware.rs  mod.rs  request_logger.rs  security_headers.rs  sentry_context.rs  tracing_middleware.rs
be/src/api/routes/: auth.rs  canvases.rs  dashboards.rs  datasources.rs  health.rs  metrics.rs  mod.rs  organizations.rs  queries.rs  runs.rs  schedules.rs  visualizations.rs
be/src/common/: cache.rs  config.rs  encryption.rs  error.rs  filtering.rs  jwt.rs  metrics.rs  mod.rs  pagination.rs  params.rs  query_limiter.rs  secrets.rs  sql_validator.rs  tracing.rs  validation.rs
be/src/common/connectors/: mod.rs  postgres.rs
be/src/common/db/: mod.rs  span_helpers.rs
be/src/common/models/: canvas.rs  dashboard.rs  datasource.rs  mod.rs  query.rs  run.rs  schedule.rs  tests.rs  user.rs  visualization.rs
be/src/runner/: main.rs
be/src/scheduler/: main.rs
be/tests/: api_tests.rs  connector_tests.rs  db_tests.rs  proptest_models.rs  proptest_security.rs  workflow_tests.rs
be/tests/common/: db.rs  fixtures.rs  helpers.rs  mod.rs
docs/: AGENTS.md  BE_TODO.md  BRIEF.md  CANVAS_README.md  CONFIGURATION.md  DATABASE_POOLING.md  DEPENDENCY_POLICY.md  ENCRYPTION.md  FE_TODO.md  FRONTEND_TODO.md  PERFORMANCE_BENCHMARKS.md  RBAC_IMPLEMENTATION.md  SECRETS_MANAGEMENT.md  SECURITY_AUDIT_2026-01.md  SECURITY_FIXES_2026-01.md  STYLEGUIDE.md  TESTING.md
fe/: README.md  env.d.ts  index.html  package.json
fe/src/: App.vue
fe/src/components/canvas/: CanvasInspector.vue  CanvasNodeCard.vue  CanvasTimeline.vue  CanvasToolbar.vue  CanvasWorkspace.vue  ConnectModeHint.vue  EdgeEditModal.vue  NoteEditor.vue  QueryEditor.vue  index.ts
fe/src/components/charts/: BarChart.vue  BaseChart.vue  DataTable.vue  LineChart.vue  PieChart.vue  SingleStat.vue  VisualizationRenderer.vue  index.ts
fe/src/components/dashboard/: GridItem.vue  index.ts
fe/src/components/editor/: SqlEditor.vue  index.ts
fe/src/components/help/: KeyboardShortcutsModal.vue
fe/src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue  ThemeToggle.vue  index.ts
fe/src/components/query/: ParameterInputs.vue  QueryParameters.vue  index.ts
fe/src/components/ui/: LAlert.vue  LBadge.vue  LButton.vue  LCard.vue  LCheckbox.vue  LEmptyState.vue  LInput.vue  LMinimap.vue  LModal.vue  LPagination.vue  LSelect.vue  LSkeleton.vue  LSpinner.vue  LTable.vue  LTagFilter.vue  LTagsInput.vue  LTextarea.vue  LTimelineScrubber.vue  LToast.vue  LToastContainer.vue  LTooltip.vue  index.ts
fe/src/composables/: useApiError.ts  useColorMode.ts  useKeyboardShortcuts.ts  usePermissions.ts  useTheme.ts  useToast.ts
fe/src/router/: index.ts
fe/src/services/api/: auth.ts  client.ts  dashboards.ts  datasources.ts  index.ts  organizations.ts  queries.ts  schedules.ts  visualizations.ts
fe/src/stores/: auth.ts  canvas.ts
fe/src/styles/: main.css
fe/src/types/: api.ts  canvas.ts  index.ts  pagination.ts
fe/src/utils/: dashboardHistory.ts  dateTime.ts
fe/src/views/: AccessDenied.vue  AuthView.vue  CanvasEditorView.vue  CanvasView.vue  DashboardEditorView.vue  DashboardsView.vue  DatasourcesView.vue  QueriesView.vue  QueryEditorView.vue  ScheduleEditorView.vue  SchedulesView.vue  SettingsView.vue  StyleGuide.vue  VisualizationEditorView.vue  VisualizationsView.vue  index.ts
load-tests/: README.md  auth-workflow.js  connection-pool-stress.js  dashboard-api.js  query-execution.js
