[package]
name = "loupe"
version = "0.1.0"
edition = "2024"

[lib]
name = "loupe"
path = "src/lib.rs"

[[bin]]
name = "loupe-api"
path = "src/api/main.rs"

[[bin]]
name = "loupe-runner"
path = "src/runner/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Password hashing
argon2 = "0.5"

# Config
config = "0.15.19"

[dev-dependencies]
# Testing
tokio-test = "0.4"
actix-rt = "2"
reqwest = { version = "0.12", features = ["json"] }
fake = { version = "3", features = ["derive", "uuid", "chrono"] }
rand = "0.9"
once_cell = "1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
serial_test = "3"
wiremock = "0.6"
claims = "0.8"
