[package]
name = "loupe"
version = "0.1.0"
edition = "2024"

[lib]
name = "loupe"
path = "src/lib.rs"

[[bin]]
name = "loupe-api"
path = "src/api/main.rs"

[[bin]]
name = "loupe-runner"
path = "src/runner/main.rs"

[[bin]]
name = "loupe-scheduler"
path = "src/scheduler/main.rs"

[dependencies]
# Web Framework
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.6"  # Rate limiting

# Security - CRITICAL: Review updates carefully for breaking changes
# See docs/DEPENDENCY_POLICY.md for update procedures
argon2 = "0.5"           # Password hashing - security critical
jsonwebtoken = "9"        # JWT authentication - security critical
aes-gcm = "0.10"         # AES-256-GCM encryption - data at rest
ring = "0.17"            # Cryptographic operations
hex = "0.4"              # Hex encoding for encrypted data

# Database - CRITICAL: Test thoroughly before updating
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

# Caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "json"] }

# Observability
prometheus = "0.13"      # Metrics collection
sentry = { version = "0.34", features = ["tracing", "tower", "rustls"] }
sentry-actix = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Distributed Tracing (OpenTelemetry)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.27"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }  # Input validation
sqlparser = { version = "0.56", features = ["visitor"] }   # SQL parsing/validation

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"          # Error type derivation
anyhow = "1"             # Error handling
dotenvy = "0.15"         # .env file loading
regex = "1"              # Pattern matching
cron = "0.15"            # Cron expression parsing
base64 = "0.22"          # Base64 encoding
config = "0.15.19"       # Configuration management

[dev-dependencies]
# Testing
tokio-test = "0.4"
actix-rt = "2"
reqwest = { version = "0.12", features = ["json"] }
fake = { version = "3", features = ["derive", "uuid", "chrono"] }
rand = "0.9"
once_cell = "1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
serial_test = "3"
wiremock = "0.6"
claims = "0.8"
proptest = "1.5"         # Property-based testing
proptest-derive = "0.5"  # Derive macros for proptest
